--- a/Гафурийень_буе.mw
+++ b/Гафурийень_буе.mw
@@ -56,7 +56,7 @@
 Весемикс мунициальной буенть покшолмась: 3038,02 вп². Покшолмась (тёж. га.) озавтома модасо 85.2 (28 %) весе покшолмастонть), эйстэст пашня: 50.3 , ледемат: 22,7 , ярсамолугат: 22,7, вирьть: 36,4.
 
 == Эриця раськеть==
-[[2010 ие]]нь Ловнома-сёрмадстоманть коряс:[[башкирт]] — 46 %,  [[рузт]] —  22.8 %, [[печкаст]] — 21.7 %,[[ветькеть]] — 7.8 %<ref name="население Башкирии">[http://ikuzeev.ru/sites/default/files/mordva_bashkortostana_%5Brezhim_sovmestimosti%5D.pdf Мордовское население в Башкортостане. ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ УЧРЕЖДЕНИЕ НАУКИ ИНСТИТУТ ЭТНОЛОГИЧЕСКИХ ИССЛЕДОВАНИЙ ИМ. Р.Г.КУЗЕЕВА УФИМСКОГО НАУЧНОГО ЦЕНТРА РОССИЙСКОЙ АКАДЕМИИ НАУК  {{ref-ru}}]</ref> — 1 %, лия раськень ломанть — 1 %<ref name="ВПН-2010">{{cite web|url=http://www.bashstat.ru/perepis2010/pub_work/Итоги%20Всероссийской%20переписи%20населения%202010%20года%20по%20Республике%20Башкортостан.pdf|title=Итоги Всероссийской переписи населения по Республике Башкортостан|format=pdf|publisher=Территориальный орган Федеральной службы государственной статистики по Республике Башкортостан|accessdate=2013-03-05|archiveurl=http://www.webcitation.org/6EzC0FMGq|archivedate=2013-03-09}}  {{ref-ru}}</ref>.
+[[2010 ие]]нь Ловнома-сёрмадстоманть коряс:[[башкирт]] — 46 %,  [[рузт]] —  22.8 %, [[печкаст]] — 21.7 %,[[ветькеть]] — 7.8 %, лия раськень ломанть — 1 %<ref name="ВПН-2010">{{cite web|url=http://www.bashstat.ru/perepis2010/pub_work/Итоги%20Всероссийской%20переписи%20населения%202010%20года%20по%20Республике%20Башкортостан.pdf|title=Итоги Всероссийской переписи населения по Республике Башкортостан|format=pdf|publisher=Территориальный орган Федеральной службы государственной статистики по Республике Башкортостан|accessdate=2013-03-05|archiveurl=http://www.webcitation.org/6EzC0FMGq|archivedate=2013-03-09}}  {{ref-ru}}</ref>.
 
 
 Эрицятнеде иетнева:
@@ -92,7 +92,6 @@
 |31 631
 |-
 |}
-
 
 == Гафурийень буень велеть ==
 
