/* Гафурийень буень велеть */

--- a/Гафурийень_буе.mw
+++ b/Гафурийень_буе.mw
@@ -95,6 +95,8 @@
 
 == Гафурийень буень велеть ==
 
+== Содавикс ломанть те велестэнть ==
+*[[ Мажит Гафури]] (1880—1934) — башкирт содавикс сёрмадей.
 
 == Лисьм.: ==
 <references />
