--- a/Гафурийень_буе.mw
+++ b/Гафурийень_буе.mw
@@ -52,6 +52,7 @@
 Буесь ашти Башкириянь куншка таркасо. Шабрацек ашти [[Кармаскалинэнь буе]] пелеве ёнкссо, [[Гафурийень буе]] чилисемасо, [[Стерлитамаконь буе]] лембе ёнкссо, [[Ишимбаень буе|Ишимбаень]] ды [[Аургазинэнь буе|Аургазинэнь]] буетнень  марто чивалгомань ёнкссо.
 
 Буеванть чудить [[Белая (лей)|Белая]] [[Зилим лей]], [[Зирган лей]], [[Усолка лей]] сянглейть.
+'''Ашо эрьке''' ({{lang-ru|Аҡкүл}}, {{lang-ru|Белое озеро}}) — покш [[эрьке]], ашти Гафурийень буесо.
 
 Весемикс мунициальной буенть покшолмась: 3038,02 вп². Покшолмась (тёж. га.) озавтома модасо 85.2 (28 %) весе покшолмастонть), эйстэст пашня: 50.3 , ледемат: 22,7 , ярсамолугат: 22,7, вирьть: 36,4.
 
