*Empty MediaWiki Message*

--- a/Гафурийень_буе.mw
+++ b/Гафурийень_буе.mw
@@ -43,7 +43,7 @@
  | Параметр1                      = {{ОКАТО|}}
 }}
 
-'''Гафурийень буее''' ({{lang-ru|Гафурийский район}}, {{lang-ba|Ғафури районы}}) — те буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
+'''Гафурийень буе''' ({{lang-ru|Гафурийский район}}, {{lang-ba|Ғафури районы}}) — те буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
 
 Куншка таркась - [[Красноусол]] веле, кона ашти 150 вп лембеёнксов Уфа ошсто ды 60 вп чивалгома ёнов  Ашо Эрьке чугункань станциястонть. 
 
