*Empty MediaWiki Message*

--- a/Украина.mw
+++ b/Украина.mw
@@ -38,7 +38,7 @@
  |Шкань каркс=+2
  |Примечания=
 }}
-'''Украина''' ({{lang-uk|Україна}} ловнови кода ''Украйина'') — мастор Чилисемань [[Европань Мастор]]со. 
+'''Украина''' ({{lang-uk|Україна}}, ловнови кода ''Украйина'') — мастор Чилисемань [[Европань Мастор]]со. 
 Украинань прявтошось — [[Киев]] ош.
 
 == Украинань масторпелькстне ==
