*Empty MediaWiki Message*

--- a/Салаватонь_буе.mw
+++ b/Салаватонь_буе.mw
@@ -1,6 +1,6 @@
 {{Регион
  | Цвет1                          = {{Цвет|Россия}}
- | Эрзянь лем                     = Салаватень буе
+ | Эрзянь лем                     = Салаватонь буе
  | Эсьлем                         = {{lang-ba|Салауат районы}}
  | Герб                           = Coat of Arms of Salavatskiy rayon (Bashkortostan).png
  | Коцт                           = Flag of Salavatsky rayon.svg
