--- a/Салаватонь_буе.mw
+++ b/Салаватонь_буе.mw
@@ -45,7 +45,7 @@
 
 '''Салаватень буе''' ({{lang-ru|Салаватский район}}, {{lang-ba|Салауат районы}}) — те буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
 
-== Содавикс ломанть те велестэнть ==
+== Содавикс ломанть те буестэнть ==
 
 * [[Салават Юлаев]] (1754—1800) 
 * [[Айдар Баик сэсэн]] (01.12.1710 — 01.10.1814) 
