*Empty MediaWiki Message*

--- a/Янаулонь_буе.mw
+++ b/Янаулонь_буе.mw
@@ -45,7 +45,7 @@
 
 '''Янаулонь буе''' ({{lang-ru|Янаульский район}}, {{lang-ba|Яңауыл районы}}) — те буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
 
-Куншка ошось - [[Янаул  ош|Янаул]]. 
+Куншка ошось — [[Янаул ош|Янаул]]. 
 
 == Янаулонь буень велеть ==
 
