--- a/Репьёвкань_буе_(Воронежень_ёнкс).mw
+++ b/Репьёвкань_буе_(Воронежень_ёнкс).mw
@@ -42,7 +42,7 @@
  | Название параметра1            = [[ОКАТО]]
  | Параметр1                      = {{ОКАТО|20245000}}
 }}
-'''Репьёвкань буе''' ({{lang-ru|Репьёвский район}}) ашти [[Воронежень ёнкс]]со. Прявтонь кункшка - [[Репьёвка (Воронежень ёнкс)|Репьёвка]] веле.
+'''Репьёвкань буе''' ({{lang-ru|Репьёвский район}}) ашти [[Воронежень ёнкс]]со. Прявтонь кункшка — [[Репьёвка (Воронежень ёнкс)|Репьёвка]] веле.
 
 
 {{stub}}
