--- a/Умёт_(Томбамонь_ёнкс).mw
+++ b/Умёт_(Томбамонь_ёнкс).mw
@@ -59,5 +59,5 @@
  |язык сайта              = 
 }}
 {{Лия смустьтне|Умёт (смустьтне)}}
-'''Умёт''' - веле [[Томбамонь ёнкс]]со, Умётонь буень прявтонь куншка.
+'''Умёт''' — веле [[Томбамонь ёнкс]]со, Умётонь буень прявтонь куншка.
 {{stub}}
