--- a/Умёт_(Томбамонь_ёнкс).mw
+++ b/Умёт_(Томбамонь_ёнкс).mw
@@ -61,3 +61,5 @@
 {{Лия смустьтне|Умёт (смустьтне)}}
 '''Умёт''' — веле [[Томбамонь ёнкс]]со, Умётонь буень прявтонь куншка.
 {{stub}}
+
+[[Category:Томбамонь ёнксонь велеть|У]]
