--- a/Умёт_(Томбамонь_ёнкс).mw
+++ b/Умёт_(Томбамонь_ёнкс).mw
@@ -59,7 +59,7 @@
  |язык сайта              = 
 }}
 {{Лия смустьтне|Умёт (смустьтне)}}
-'''Умёт''' — веле [[Томбамонь ёнкс]]со, Умётонь буень прявтонь куншка.
+'''Умёт''' — веле [[Томбамонь ёнкс]]со, [[Умётонь буе (Томбамонь ёнкс)|Умётонь буень]] прявткуншка тарка.
 {{stub}}
 
 [[Category:Томбамонь ёнксонь велеть|У]]
