*Empty MediaWiki Message*

--- a/Брюссель_ош.mw
+++ b/Брюссель_ош.mw
@@ -58,4 +58,4 @@
  |сайт                    = http://www.bruxelles.be/
  |язык сайта              = 
 }}
-'''Брюссе́ль''' ({{lang-nl|Brussel}} {{ipa|[ˈbrʏsəl]}}, {{lang-fr|Bruxelles}} {{ipa|[bʁyˈsɛl]}}) - те Бельгия Масторлонь прявтошось.
+'''Брюссе́ль''' ({{lang-nl|Brussel}} {{ipa|[ˈbrʏsəl]}}, {{lang-fr|Bruxelles}} {{ipa|[bʁyˈsɛl]}}) — те [[Бельгия Мастор]]лонь прявтошось.
