*Empty MediaWiki Message*

--- a/Фонетика.mw
+++ b/Фонетика.mw
@@ -1,4 +1,4 @@
-'''Фонетика''' мерить истямо наукадо, кона ёвтни кода ёвтни валтнэде - вайгелькстнэде. 
+'''Фонетика''' мерить истямо наукадо, кона ёвтни кода ёвтни валтнэде — вайгелькстнэде. 
 
 Валтнэ теевить вейке эли ламо вайгельксстэ. ''Мон сёрмадан сёрма'' валрисьмесэнть васенце валсонть (мон) колмо вайгелькст, омбоцесэнть (сёрмадан) кавксо вайгелькст, колмоцесэнть (сёрма) вете. Эрьва валонть ули эсензэ чарькодемазо.
 
