--- a/Паранеи_(Отяжбуе).mw
+++ b/Паранеи_(Отяжбуе).mw
@@ -61,7 +61,7 @@
 '''Паранеи''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
 ==Содавикс ломанть те велестэнть==
-* [[Долганов, Александр Васильевич|Александр Долганов ]]<ref name="МРОКМ им. И.Д. Воронина_Сын земли">[http://www.mrkm.ru/news/?id=456  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Сын земли] {{ref-ru}}</ref> — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}})
+* [[Долганов, Александр Васильевич|Александр Долганов ]]<ref name="МРОКМ им. И.Д. Воронина_Сын земли">[http://www.mrkm.ru/news/?id=456  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Сын земли] {{ref-ru}}</ref> — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}).
 
 == Лисьм.: ==
 <references />
