--- a/Эйдень_каша.mw
+++ b/Эйдень_каша.mw
@@ -41,11 +41,11 @@
 }}
 '''Эйдень каша<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''' ({{lang-la|Círsium oleráceum}}, {{lang-ru| ''Мачо́к<ref name="ИОСР">[http://herba.msu.ru/shipunov/school/books/gubanov2003_illustr_opred_rast_sred_rossii_2.djvu Губанов И. А., Киселёва К. В., Новиков В. С., Тихомиров В. Н.  Иллюстрированный определитель растений Средней России. М. Т-во научных изданий КМК, Ин-т технологических исследований. 2003 г. том 2. Покрытосеменные (двудольные: раздельнолепестные) стр. 665 ISBN 9-87317-128-9] {{ref-ru}}</ref>'', или ''Глауциум<ref name="Флора СССР">[Род 554. Глауциум — Glaucium Adans. // Флора СССР : в 30 т. / гл. ред. В. Л. Комаров. — М.—Л. : Изд-во АН СССР, 1937. — Т. VII / ред. тома Б. К. Шишкин. — С. 585—595. — 792 + XXVI с. — 5200 экз.]</ref>''}}) — вейке-, кавто- ламоиень  [[тикше]]нь касовкс Маконь семиястонть (''Papaveraceae''). 
 
-[[File:Illustration Glaucium corniculatum0 clean.jpg|thumb|250px|left|сюракшов эйдень каша (''Glaucium corniculatum'')]]
+[[File:Illustration Glaucium corniculatum0 clean.jpg|thumb|250px|left|Сюракшов эйдень каша (''Glaucium corniculatum'')]]
 
 == Тикшень лемтне ==
 Лемесь саеви {{lang-grc|γλαύκιον}} валстонть, конань смустезэ ''килей ведь'' (''Glaucium corniculatum''). Кона сонсь саизеть лементь [[тюс]] эйстэ {{lang-grc|γλαυκός}} «[[валдо-сэнь]]», «пижелдт мери».
-* ({{Lang-lat|Glaucium corniculatum}}, {{lang-ru| ''Мачок рогатый''}})  - '''''[[сюракшов эйдень каша]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Glaucium corniculatum}}, {{lang-ru| ''Мачок рогатый''}}) — '''''[[сюракшов эйдень каша]]'''''<ref name="Русско-эрзянский ботанический"/>. 
 
 == Фотокувт== 
 == Содамоёвкст ==
