*Empty MediaWiki Message*

--- a/Покш_Чернигань_буе_Самарань_ёнксcо.mw
+++ b/Покш_Чернигань_буе_Самарань_ёнксcо.mw
@@ -43,7 +43,7 @@
  | Параметр1                      = {{ОКАТО|36210000}}
 }}
 
-''Покш Чернигань бу́е''' ({{lang-ru|Большечерниговский район}}) — те буе [[лембе ёнкс]]о [[Самарань ёнкс|Самарань ёно]] [[Россия Мастор|Россиясо]]. 
+'''Покш Чернигань бу́е''' ({{lang-ru|Большечерниговский район}}) — те буе [[лембе ёнкс]]о [[Самарань ёнкс|Самарань ёно]] [[Россия Мастор|Россиясо]]. 
 
 Куншка ошось -  [[Покш Чернига веле (Самарань ёнкс)|Покш Чернига веле]].
 
