*Empty MediaWiki Message*

--- a/Мода.mw
+++ b/Мода.mw
@@ -1,4 +1,5 @@
 {{Лия смустьтне|Мода (смустьтне)}}
+[[Артовкс:פארק הכרמל 5 - גנים לאומיים בצפון הארץ - אתרי מורשת 2016 (529).jpg|кенжешка|Мода]]
 '''Модась''' — те верьга-ланга эрямо Моданть слоезэ, конань кедьсэ ули раштамо модась.
 
 Модась — те эрзятнень вейсэндиця пелькс. [[эрзят|Эрзянь раськень]] оймеежомарямочисэнть ды Пазне кемема койтнесэ модась истямо:
