*Empty MediaWiki Message*

--- a/Винницань_ёнкс.mw
+++ b/Винницань_ёнкс.mw
@@ -1,7 +1,7 @@
 {{Регион
  |Цвет1                            = {{Цвет|Украина Мастор}}
- |Эрзянь лем                       = Херсононь ёнкс
- |Эсьлем                           = {{Lang-uk|Херсо́нська о́бласть}}
+ |Эрзянь лем                       = Винницань ёнкс
+ |Эсьлем                           = {{Lang-uk|Вінницька о́бласть}}
  |Герб                             = Coat of Arms of Vinnytsa Oblast.svg
  |Коцт                             = Prapor Vinnytskoyi oblasti.svg
  |Ширина герба                     = 
