--- a/Винницань_ёнкс.mw
+++ b/Винницань_ёнкс.mw
@@ -73,7 +73,7 @@
  |Категория в Commons              = 
  |Примечания                       = 
 }}
-'''Винницань ёнкс'''  ({{Lang-uk|Вінницька о́бласть}}) - масторпельксесь Украинасо.
+'''Винницань ёнкс'''  ({{Lang-uk|Вінницька о́бласть}}) - масторпельксесь [[Украина]]со.
 
 ==Винницань ёнксонь буетне ==
 
