*Empty MediaWiki Message*

--- a/Винницань_ёнкс.mw
+++ b/Винницань_ёнкс.mw
@@ -73,7 +73,7 @@
  |Категория в Commons              = 
  |Примечания                       = 
 }}
-'''Винницань ёнкс''' ({{Lang-uk|Вінницька о́бласть}}) - масторпельксесь [[Украина]]со.
+'''Винницань ёнкс''' ({{Lang-uk|Вінницька о́бласть}}) - масторпельксесь [[Украина]]со.  Ёнксонть куншка ош — [[Винница ош]]ось.
 
 ==Винницань ёнксонь буетне ==
 
