*Empty MediaWiki Message*

--- a/Винница_ош.mw
+++ b/Винница_ош.mw
@@ -60,7 +60,7 @@
  |язык сайта              = 
 }}
 
-'''Ви́нница ош''' ({{lang-uk|Ві́нниця}}) — те [[Украина Мастор|Украина Масторонть]] ошось.
+'''Ви́нница ош''' ({{lang-uk|Ві́нниця}}) — те [[Украина Мастор|Украина Масторонть]] ошось. [[Винницань ёнкс]]онть куншка ош.
 
 
 [[Категория:Украинань ошт]]
