--- a/Донецкоень_ёнкс.mw
+++ b/Донецкоень_ёнкс.mw
@@ -19,7 +19,7 @@
  |Статус                           = ёнкс
  |Ашти                             = 
  |Включает                         = 
- |Прявтош                          = [[Донецкой ош]]
+ |Прявтош                          = [[Донецк ош (Донецкой ёнкс)|Донецк ош]]
  |Сехте покш ош                    = 
  |Сехте покш ошт                   = 
  |Образование                      = 
