*Empty MediaWiki Message*

--- a/Донецкой_ош_(Донецкоень_ёнкс).mw
+++ b/Донецкой_ош_(Донецкоень_ёнкс).mw
@@ -20,7 +20,7 @@
  |размер карты региона    = 
  |размер карты района     = 
  |вид региона             = Ёнкс
- |регион                  = Донецкой
+ |регион                  = Донецкоень ёнкс
  |регион в таблице        = 
  |вид района              = 
  |район                   = 
