*Empty MediaWiki Message*

--- a/Донецкой_ош_(Донецкоень_ёнкс).mw
+++ b/Донецкой_ош_(Донецкоень_ёнкс).mw
@@ -1,4 +1,3 @@
-<br />
 {{ЭТ
  |статус                  = Ош
  |Эрзянь лем              = Донецк ош
@@ -12,8 +11,8 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = 48|lat_min = 00|lat_sec = 32
-  |lon_dir = |lon_deg = 37|lon_min = 48|lon_sec = 15
+  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
@@ -59,7 +58,7 @@
  |сайт                    = http://mer.dn.ua/
  |язык сайта              = 
 }}
-Донецк ош ({{lang-uk|Донецьк}}) — те [[Украина Мастор|Украина Масторонть]] ошось.
+Донецк ош ({{lang-uk|Донецьк}}) — те [[Украина Мастор|Украина Масторонть]] ошось, Донецкоень ёнксонь прявтошось.
 
 
 [[Категория:Украинань ошт]]
