*Empty MediaWiki Message*

--- a/Донецкой_ош_(Донецкоень_ёнкс).mw
+++ b/Донецкой_ош_(Донецкоень_ёнкс).mw
@@ -4,7 +4,7 @@
  |оригинальное название   = {{lang-uk|Донецьк}}
  |изображение             = 
  |подчинение              = 
- |мастор                  = Украина Мастор
+ |мастор                  = 
  |герб                    = 
  |коцт                    = 
  |описание герба          = 
