отключил шаблон, он сюда не подходит

--- a/Лембеёнксонь_Америка.mw
+++ b/Лембеёнксонь_Америка.mw
@@ -1,4 +1,4 @@
-{{Мастор2
+<!--{{Мастор2
  |Статус                  = <!-- только для непризнанных государств или автономных территорий-->
  |Эрзянь лем              = Лембеёнксонь Америка
  |Оригинальное название   = South America
@@ -70,6 +70,8 @@
 <!-- |Без флага и герба=* -->
 <!-- |Без гимна=* -->
 }}
+
+-->
 '''Лембеёнксонь Америка''' ({{lang-es|América del Sur, Sudamérica, Suramérica}}, {{lang-pt|América do Sul}}, {{lang-en|South America}}, {{lang-nl|Zuid-Amerika}}, {{lang-fr|Amérique du Sud}}, {{lang-gn|Ñembyamérika}}, {{lang-qu|Urin Awya Yala, Urin Amerika}}))— лембеёнксонь покшмастор Америкасо, кона ашти Чивалгомань ды Лембеёнксонь Моданть пельшартнэсэ.
 
 Сехте вечкевикс тонавтнеманть коряс кельденть Лембеёнксонь Америкасо ашти англаньсесь, французонь, [[Немецень кель|немецень]] ды [[Италиянь кель|италиянь]]. Ломантне тесэ содыть ламо кельть:
