--- a/Лембеёнксонь_Америка.mw
+++ b/Лембеёнксонь_Америка.mw
@@ -1,77 +1,6 @@
-<!--{{Мастор2
- |Статус                  = <!-- только для непризнанных государств или автономных территорий-->
- |Эрзянь лем              = Лембеёнксонь Америка
- |Оригинальное название   = South America
- |Родительный падеж       = Лембеёнксонь Американь
- |Герб                    = 
- |Вместо герба            = 
- |Коцт                    =Flags of South American Conmebol Members.gif
- |Девиз                   = 
- |Перевод девиза          =
- |Кирдимасторонь моро лемесь  = 
- |Аудио                   = 
- |Правлениянь хвормась    = 
- |Масторпрявт пазонь кемемась = 
- |На карте                = South America (orthographic projection).svg
-  |подпись к карте        = '''Лембеёнксонь Американть''' аравтнемазо (чопода-пиже):<br />
- |На карте2               = 
- |Кельть                  = 
- |Путозь-ушодозь          =
- |Аулькедьалонь чись      = 
- |Аулькедьалксось эйстэ   =
- |Прявтош                 =
- |Сехте покш ошт          =  
-[[Артовкс:Flag of Brazil.svg|22px]] [[Сан-Паулу ош]]<br /> 
-[[Артовкс:Flag of Argentina (alternative).svg|22px]]  [[Буэнос-Айрес ош]]<br /> 
-[[Артовкс:Flag of Brazil.svg|22px]] [[Рио-де-Жанейро ош]]<br />
-[[Артовкс:Flag of Colombia.svg|22px]] [[Богота ош]]<br />
-[[Артовкс:Flag of Peru (state).svg|22px]] [[Лимаа ош]]<br />
-[[Артовкс:Flag of Chile.svg|22px]] [[Сантьяго ош]]<br /> [[Артовкс:Flag of Venezuela (state).svg|22px]] [[Каракас ош]]<br />
-[[Артовкс:Flag of Colombia.svg|22px]] [[Медельин ош]]<br />
-[[Артовкс:Flag of Brazil.svg|22px]] [[Белу-Оризонти ош]]<br />
-[[Артовкс:Flag of Colombia.svg|22px]] [[Кали ош]]<br />
- |Прявттнэнь таркаст      =  
- |Прявттнэ                =  
- |Таркась модаванть       = 
- |Покшолмазо              = 17 840 000
- |Веденть процентэсь      = 6,76
- |Этнохороним             = 
-  |Таркась эрицятнева     = 
-  |Эрицятне               = 387 489 196 
-  |Онкстнемамелень иесь   = 2011
-  |Эрицятне раськень сёрмацтомань коряс  = 
-  |Раськень сёрмацтомась иесь = 
-  |Ломантнень плотностесь = 21,4
- |МВЭ                     =
- |МВЭ-нь ловнома иесь     = 
- |Таркась МВЭ-нть корява  = 
- |Вейке эрицяс МВЭ-сь = 
- |МВЭ (РВ)                = 
- |Год расчёта ВВП (ППС)   = 
- |Место по ВВП (ППС)      = 
- |ВВП (ППС) на душу населения = 
- |Место по ВВП (ППС) на душу населения = 
- |МВЭ (номинал)             = 
- |Год расчёта ВВП (номинал) = 
- |Место по ВВП (номинал)    = 
- |ВВП (номинал) на душу населения = 
- |Место по ВВП (номинал) на душу населения = 
- |ЛКИ                     =
- |ЛКИ-нь ловнома иесь     = 
- |Таркась ЛКИ коряс       = 
- |ЛКИ уровень             = 
- |Авиакомпания            = 
- |Валютась-ярмакось       =  
- |Домен/Доментне          = 
- |Телефонной кодось       = 
- |Шкань каркс             = 
- |Примечания              = <references/>
+[[File:South America (orthographic projection).svg|thumb|250px]]
+ 
 
-<!-- |Без флага и герба=* -->
-<!-- |Без гимна=* -->
-}}
-
--->
 '''Лембеёнксонь Америка''' ({{lang-es|América del Sur, Sudamérica, Suramérica}}, {{lang-pt|América do Sul}}, {{lang-en|South America}}, {{lang-nl|Zuid-Amerika}}, {{lang-fr|Amérique du Sud}}, {{lang-gn|Ñembyamérika}}, {{lang-qu|Urin Awya Yala, Urin Amerika}}))— лембеёнксонь покшмастор Америкасо, кона ашти Чивалгомань ды Лембеёнксонь Моданть пельшартнэсэ.
 
 Сехте вечкевикс тонавтнеманть коряс кельденть Лембеёнксонь Америкасо ашти англаньсесь, французонь, [[Немецень кель|немецень]] ды [[Италиянь кель|италиянь]]. Ломантне тесэ содыть ламо кельть:
@@ -101,6 +30,17 @@
 |[[Французонь кель|французонь]]
 |align="right"|230 000
 |}
+
+== Сехте покш ош ==
+[[Артовкс:Flag of Brazil.svg|22px]] [[Сан-Паулу ош]]<br /> 
+[[Артовкс:Flag of Argentina (alternative).svg|22px]]  [[Буэнос-Айрес ош]]<br /> 
+[[Артовкс:Flag of Brazil.svg|22px]] [[Рио-де-Жанейро ош]]<br />
+[[Артовкс:Flag of Colombia.svg|22px]] [[Богота ош]]<br />
+[[Артовкс:Flag of Peru (state).svg|22px]] [[Лимаа ош]]<br />
+[[Артовкс:Flag of Chile.svg|22px]] [[Сантьяго ош]]<br /> [[Артовкс:Flag of Venezuela (state).svg|22px]] [[Каракас ош]]<br />
+[[Артовкс:Flag of Colombia.svg|22px]] [[Медельин ош]]<br />
+[[Артовкс:Flag of Brazil.svg|22px]] [[Белу-Оризонти ош]]<br />
+[[Артовкс:Flag of Colombia.svg|22px]] [[Кали ош]]<br />
 
 == Сёрм.: ==
 <references />
