--- a/Хилково_(Торбейбуе).mw
+++ b/Хилково_(Торбейбуе).mw
@@ -59,6 +59,7 @@
  |язык сайта              = 
 }}
 '''Хилково''' ({{Lang-ru|с. Хилково}}) — веле [[Торбейбуе]]сэ, [[Мордовия]]со.
+Эрицятнеде: 355 лом. (20021 ие).
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
 * [[Козлов, Юрий Федорович|Юрий Федорович Козлов]]<ref name="БМЛ_Козлов">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=12 Библиотека Мордовской литературы: Козлов Юрий Федорович] {{ref-ru}}</ref> — кулянь-сёрмадей, сёрмадей
