*Empty MediaWiki Message*

--- a/Цянав.mw
+++ b/Цянав.mw
@@ -1,4 +1,36 @@
-[[Image:Landsvale.jpg|thumb|250px|Велень цянав]]
+{{Таксономиясь
+|name = ''Ло́ксей''
+|latin = ''Cygnus''
+|image file = Landsvale.jpg
+|image descr = Велень цянав
+|superregnum =
+|subregnum = [[Animalia|Ракша]]
+|раздел =
+|superphylum =
+|phylum = [[Chordata]]
+|subphylum =
+|superdivisio =
+|divisio =
+|subdivisio = 
+|superclassis =
+|classis = [[Нармунть|нармунь]]
+|subclassis =
+|infraclassis =
+|superordo =
+|ordo = 
+|subordo =
+|infraordo =
+|superfamilia =
+|familia = 
+|subfamilia =
+|tribus =
+|genus =
+|subgenus =
+|species =
+|subspecies =
+|unranked =
+|range map = 
+}}
 
 '''Цянав''' (лат. ''Hirundo rustica'') — те вишкине лиямасторов ливтниця [[нармунть|нармунь]], кона эри Эвропань, Азиянь, Раужо ды Американь Мастортнэсэ. Лиякстоми кувака пулонть марто домка керявкс марто сянго ладсо, ды мендявозь, кувака пшти сёлмо марто. 
 
