*Empty MediaWiki Message*

--- a/Донецкой_ош_(Донецкоень_ёнкс).mw
+++ b/Донецкой_ош_(Донецкоень_ёнкс).mw
@@ -58,7 +58,7 @@
  |сайт                    = http://mer.dn.ua/
  |язык сайта              = 
 }}
-Донецк ош ({{lang-uk|Донецьк}}) — те [[Украина Мастор|Украина Масторонть]] ошось, Донецкоень ёнксонь прявтошось.
+'''Донецк ош''' ({{lang-uk|Донецьк}}) — те [[Украина Мастор|Украина Масторонть]] ошось, [[Донецкоень ёнкс]]онь прявтошось.
 
 
 [[Категория:Украинань ошт]]
