--- a/Донецкой_ош_(Донецкоень_ёнкс).mw
+++ b/Донецкой_ош_(Донецкоень_ёнкс).mw
@@ -1,6 +1,6 @@
 {{ЭТ
  |статус                  = Ош
- |Эрзянь лем              = Донецк ош
+ |Эрзянь лем              = Донецкой ош
  |оригинальное название   = {{lang-uk|Донецьк}}
  |изображение             = 
  |подчинение              = 
@@ -58,7 +58,7 @@
  |сайт                    = http://mer.dn.ua/
  |язык сайта              = 
 }}
-'''Донецк ош''' ({{lang-uk|Донецьк}}) — те [[Украина Мастор|Украина Масторонть]] ошось, [[Донецкоень ёнкс]]онь прявтошось.
+'''Донецкой ош''' ({{lang-uk|Донецьк}}) — те [[Украина Мастор|Украина Масторонть]] ошось, [[Донецкоень ёнкс]]онь прявтошось.
 
 
 [[Категория:Украинань ошт]]
