*Empty MediaWiki Message*

--- a/Цянав.mw
+++ b/Цянав.mw
@@ -1,6 +1,6 @@
 {{Таксономиясь
-|name = ''Ло́ксей''
-|latin = ''Cygnus''
+|name = Цянав
+|latin = Hirundo rustica
 |image file = Landsvale.jpg
 |image descr = Велень цянав
 |superregnum =
@@ -32,6 +32,6 @@
 |range map = 
 }}
 
-'''Цянав''' (лат. ''Hirundo rustica'') — те вишкине лиямасторов ливтниця [[нармунть|нармунь]], кона эри Эвропань, Азиянь, Раужо ды Американь Мастортнэсэ. Лиякстоми кувака пулонть марто домка керявкс марто сянго ладсо, ды мендявозь, кувака пшти сёлмо марто. 
+'''Цянав''' ({{Lang-la|Hirundo rustica}}) — те вишкине лиямасторов ливтниця [[нармунть|нармунь]], кона эри Эвропань, Азиянь, Раужо ды Американь Мастортнэсэ. Лиякстоми кувака пулонть марто домка керявкс марто сянго ладсо, ды мендявозь, кувака пшти сёлмо марто. 
 
 [[Category:Нармунть|Ц]]
