--- a/Кортамо:Донецкоень_ёнкс.mw
+++ b/Кортамо:Донецкоень_ёнкс.mw
@@ -1,1 +1,2 @@
 [[User:Visem]], в эрзянском языке к топонимам, имеющие славянскую этимологию и заканчивающиеся на -ск, принято добавлять аффикс -ой, либо убирать суффикс -ск. Поэтому город Донецк на эрзянском языке будет называться либо Донец ош, либо Донецкой ош. Соответственно, название области либо Донецэнь, либо Донецкоень. В том варианте топонима, что ты предложил, генетив будет писаться как Донецкэнь. [[User:Erzianj jurnalist|Andü]], ты можешь не согласиться, но так объясняла [[Теиця:Olga Bogdanova]], если конечно я правильно понял --[[Теиця:Kaftaj|Kaftaj]] ([[Теицянь кортамось:Kaftaj|обсуждение]]) 17:53, 31 Ацамковонь 2016 (UTC)
+: [[User:Visem]], прошу прощения. только сейчас увидел что вы попытались исправить мной же сделанный разнобой в топонимах. --[[Теиця:Kaftaj|Kaftaj]] ([[Теицянь кортамось:Kaftaj|обсуждение]]) 18:23, 31 Ацамковонь 2016 (UTC)
