--- a/Салаватонь_буе.mw
+++ b/Салаватонь_буе.mw
@@ -43,7 +43,7 @@
  | Параметр1                      = {{ОКАТО|}}
 }}
 
-'''Салаватень буе''' ({{lang-ru|Салаватский район}}, {{lang-ba|Салауат районы}}) — те буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
+'''Салаватонь буе''' ({{lang-ru|Салаватский район}}, {{lang-ba|Салауат районы}}) — те буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
 
 == Содавикс ломанть те буестэнть ==
 
