*Empty MediaWiki Message*

--- a/Салаватонь_буе.mw
+++ b/Салаватонь_буе.mw
@@ -17,8 +17,8 @@
  | Статус                         = [[Муниципальной буе]]
  | Ашти                           = [[Башкирия Республикась|Башкириясо]]
  | Включает                       = 
- | Прявтош                        = [[Малояз]] веле
- | Образование                    = [[1935ие]]
+ | Прявтош                        = [[Малояз (Салаватонь буе)|Малояз]] веле
+ | Образование                    = [[1935 ие]]
  | Упразднение                    = 
 |Глава                            = 
   |Название главы                  = 
