*Empty MediaWiki Message*

--- a/Туймазань_буе.mw
+++ b/Туймазань_буе.mw
@@ -42,4 +42,4 @@
  | Название параметра1            = [[ОКАТО]]
  | Параметр1                      = {{ОКАТО|}}
 }}
-'''Туймазань буе''' ({{lang-ru|Туймазинский район}}, {{lang-ba|Туймазы районы}}) - те муниципальной буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. Куншка таркась - Туймазы ош.
+'''Туймазань буе''' ({{lang-ru|Туймазинский район}}, {{lang-ba|Туймазы районы}}) — те муниципальной буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. Куншка таркась - Туймазы ош.
