*Empty MediaWiki Message*

--- a/Башкирт.mw
+++ b/Башкирт.mw
@@ -31,7 +31,7 @@
 * Кода сёрмадыть XVIII пингень сёрмадейтне В. Н. Татищев, П. И. Рычков, И. Г. Георги ''башҡорт'' валось канды «прявт верьгиз» ({{lang-ru|«главного волка»<ref>«История Российская». Т. 1. М.-Л., 1962. С. 252 {{ref-ru}}</ref><ref>«История Оренбургская». СПб., 1759. С. 10 {{ref-ru}}</ref><ref>«Описание всех обитающих в Российском государстве народов и их житейских обрядов, обыкновений, одежд, жилищ, вероисповеданий и прочих достопамятностей». СПб., 1799. С.85 {{ref-ru}}</ref>}}) смусть; 
 *  1847 иестэ В. С. Юматов историкесь-краеведэсь сёрмадсь, ''башҡорт'' валось канды  «мекшкирдий, мекшень азор» ({{lang-ru|«пчеловод, хозяина пчёл»<ref>«Оренбургские губернские ведомости». «О названии башкирцев» (№ 24). С.297 {{ref-ru}}</ref>}}) смусть;
 * Кода сёрмадозь  {{lang-ru|«Исторической записки о местности прежней уфимской провинции, где был центр древней Башкирии»}}), кона ульнесь нолдазь [[Ине-Петрань ош|Петра ошсо]] 1867 иестэ,  ''башҡорт'' валось канды Урал прявтонть лементь<ref>Историческая записка о местности прежней уфимской провинции, где был центр древней Башкирии, Санкт-Петербург, 1867, стр.1 {{ref-ru}}</ref>;
-* А. Е. Алекторов россиянь историкесь ды этнографось  1885 иестэ сёрмадсь, ''башҡорт'' смустесь «башка раське» ({{lang-ru|«отдельный народ»<ref>«Оренбургский листок» (№ 46){{ref-ru}}</ref>}}); 
+* А. Е. Алекторов россиянь историкесь ды этнографось  1885 иестэ сёрмадсь, ''башҡорт'' смустесь «башка раське» ({{lang-ru|«отдельный народ»<ref>«Оренбургский листок» (№ 46){{ref-ru}}</ref>}}).
 
 == Лисьм.: ==
 <references />
