--- a/Чополтбуе.mw
+++ b/Чополтбуе.mw
@@ -58,7 +58,7 @@
 == Потмомодань ведть ==
 
 == Велькс ведть ==
-Лейтне — [[Мокша лей|Мокша]], [[Сатис лей|Сатис]], [[Пушта лей|Пушта]], [[Урей лей|Урей]], [[Ляце лей|Ляча]], Шуструй. Коффициентесь тустома лень алтоманть — 0,33 вп/вп<sup>2</sup> <br />.
+Лейтне — [[Мокша лей|Мокша]], [[Сатис лей|Сатис]], [[Пушта лей|Пушта]], [[Урей лей|Урей]], [[Ляце лей|Ляча]], Шуструй. Коффициентесь тустома лень алтоманть — 0,33 вп/вп<sup>2</sup>.
 
 == Модат ==
 
