*Empty MediaWiki Message*

--- a/Водьть.mw
+++ b/Водьть.mw
@@ -25,5 +25,5 @@
 
 Кортыть [[Водь кель|водень кельсэ]].
 [[Артовкс:Votic language map.png|thumb|300px|Мастортне [[Водть|водень]], [[ингерманландецт|ингерманландецэнь]] ды [[Ижорт|ижорань]] велетнэнь марто, 1848—2007 ии.]]
-
+== Сёрм.: ==
 [[Категория:Раськеть|В]]
