--- a/Штатол.mw
+++ b/Штатол.mw
@@ -4,7 +4,7 @@
 [[File:Shtatol OYME.jpg|thumb|Штатол - те эрзянь озксонь кедь ёнкс.]]
 
 == Сёрм. ==
-*[https://slovari.yandex.ru/~книги/Толковый%20словарь%20Даля/ШТАТОЛ/: словарь Даля] {{ref-ru}}
+*[https://slovari.yandex.ru/~книги/Толковый%20словарь%20Даля/ШТАТОЛ/: Словарь Даля] {{ref-ru}}
 *[http://uralistica.com/photo/2013-3 Штатолонь кирвазтема. Калаганонь Керяз.] (фотокувт){{ref-myv}}
 *[http://uralistica.com/m/photo?id=2161342%3APhoto%3A81844 Изготовление штатола на Раскень озкс.] (фотокувт){{ref-ru}}
 <references />
