*Empty MediaWiki Message*

--- a/Петровскоень_буе_(Томбамонь_ёнкс).mw
+++ b/Петровскоень_буе_(Томбамонь_ёнкс).mw
@@ -41,7 +41,7 @@
  | Название параметра1            = [[ОКАТО]]
  | Параметр1                      = {{ОКАТО|}}
 }}
-'''Петровскоень буе''' ({{lang-ru|Петровский район}}) ашти [[Томбамонь ёнкс]]со. Прявтонь кункшка - [[Петровской (Томбамонь ёнкс)|Петровской]] веле.
+'''Петровскоень буе''' ({{lang-ru|Петровский район}}) ашти [[Томбамонь ёнкс]]со. Прявтонь кункшка — [[Петровской (Томбамонь ёнкс)|Петровской]] веле.
 
 
 {{stub}}
