*Empty MediaWiki Message*

--- a/Од_веле_(Лугаян_буе).mw
+++ b/Од_веле_(Лугаян_буе).mw
@@ -60,7 +60,7 @@
  |язык сайта              = 
 |примечания              = <references/>
 }}
-'''Од веле''' ({{Lang-ru|Новосёлки}}) - эрзянь веле [[Лугаян буе]]сэ [[Алоошонь ёнкс]]со.
+'''Од веле''' ({{Lang-ru|Новосёлки}}) — эрзянь веле [[Лугаян буе]]сэ [[Алоошонь ёнкс]]со.
 
 == «Эрзянь лисьмапря» покшчись ==
 Авасоло Од веленть эйстэ «Кельмелисьмалеень Лисьмапря»-со ютавтневи «Эрзянь лисьмапря» покшчи. [[Медьковонь 27 чи]]стэ [[2013 ие]]стэ сон ютась колмоцекс<ref>[http://kultura-lukoyanov.ru/2013/07/28/межрегиональный-фестиваль-эрзянь-ли/ Межрегиональный фестиваль “Эрзянь лисьмапря” село Новоселки Лукояновский район Нижегородской области{{ref-ru}}]</ref>. Тедиде покшчись ютась медьковонь 18 чистэ.
