--- a/Шарапуло.mw
+++ b/Шарапуло.mw
@@ -15,7 +15,7 @@
 | wikispecies = Ondatra zibethicus
 | commons = Ondatra zibethicus
 }}
-'''Шарапуло''' (Ведькатка) — те идем [[ракшат|ракша]].
+'''Шарапуло''' (Ведькатка) ({{lang-la|Ondatra zibethicus}}, {{lang-ru|Ондатра}}) — те идем [[ракшат|ракша]].
 
 [[Категория:Ракшат|Ш]]
 [[Категория:Пачат|Ш]]
