--- a/Вешкайбуе.mw
+++ b/Вешкайбуе.mw
@@ -1,4 +1,47 @@
-[[Артовкс:Coat of Arms of Veshkayma rayon (Ulianovsk oblast).png|right|100px]]
+{{Регион
+ | Цвет1                          = {{Цвет|Россия}}
+ | Эрзянь лем                     = Базарсызганонь буе
+ | Эсьлем                         = {{lang-ru|Базарносызганский район}}
+ | Герб                           = Coat of Arms of Veshkayma rayon (Ulianovsk oblast).png
+ | Коцт                           = 
+ | Гимн                           = 
+ | Мастор                         = {{RUS}}
+ | lat_dir                        = 
+ | lat_deg                        = |lat_min = |lat_sec =
+ | lon_dir                        = 
+ | lon_deg                        = |lon_min = |lon_sec =
+ | region                         = 
+ | type                           = 
+ | уровень                        = 
+ | CoordScale                     = 
+ | Статус                         = [[Вешкайбуе]]
+ | Ашти                           = [[Ульянонь ёнкс]]со
+ | Включает                       = 
+ | Прявтош                        = 
+ | Образование                    = 
+ | Упразднение                    = 
+|Глава                            = 
+  |Название главы                  = 
+ |Глава2                           = 
+  |Название главы2                 = Администрациянь прявт
+ | Карта                          = Veshkaymsky Raion of Ulyanovsk Oblast.png
+ | Размер карты                   = 
+ | Карта административной единицы = 
+ | Размер карты ае                = 
+ | Часовой пояс                   = {{MSK+0}}
+ | Аббревиатура                   = 
+ | ISO                            = 
+ | FIPS                           = 
+ | Телефонный код                 = 
+ | Почтовые индексы               = 
+ | Интернет-домен                 = 
+ | Код автомобильных номеров      =
+ | Сайт                           = Veshkaymsky Raion of Ulyanovsk Oblast.png
+ | Категория в Commons            = 
+ | Примечания                     = 
+ | Название параметра1            = [[ОКАТО]]
+ | Параметр1                      = {{ОКАТО|}}
+}}
 '''Вешкайбуе''' — [[Ульянонь ёнкс|Ульянонь ёнксонь]] буесь. Прявтошось — [[Вешкайма]]. Буень масторонь покшолмазо 1435,5 вп². Эрицятнеде — 25,7 тёжат, [[эрзят]] 6 %, [[рузт]] 85 %, [[печкаст]] 2 %, [[ветькеть]] 2 %.
 
 {{Ульянонь ёнксонь буетне}}
