--- a/Инзейбуе.mw
+++ b/Инзейбуе.mw
@@ -1,4 +1,47 @@
-[[Артовкс:Coat of arms of Inzensky Raion.png|right|100px]]
+{{Регион
+ | Цвет1                          = {{Цвет|Россия}}
+ | Эрзянь лем                     = Инзейбуе
+ | Эсьлем                         = {{lang-ru|Инзенский район}}
+ | Герб                           = Coat of arms of Inzensky Raion.png
+ | Коцт                           = Flag of Inzensky Raion.svg
+ | Гимн                           = 
+ | Мастор                         = {{RUS}}
+ | lat_dir                        = 
+ | lat_deg                        = |lat_min = |lat_sec =
+ | lon_dir                        = 
+ | lon_deg                        = |lon_min = |lon_sec =
+ | region                         = 
+ | type                           = 
+ | уровень                        = 
+ | CoordScale                     = 
+ | Статус                         = [[Вешкайбуе]]
+ | Ашти                           = [[Ульянонь ёнкс]]со
+ | Включает                       = 
+ | Прявтош                        = 
+ | Образование                    = 
+ | Упразднение                    = 
+|Глава                            = 
+  |Название главы                  = 
+ |Глава2                           = 
+  |Название главы2                 = Администрациянь прявт
+ | Карта                          = Inzensky Raion of Ulyanovsk Oblast.png
+ | Размер карты                   = 
+ | Карта административной единицы = 
+ | Размер карты ае                = 
+ | Часовой пояс                   = {{MSK+0}}
+ | Аббревиатура                   = 
+ | ISO                            = 
+ | FIPS                           = 
+ | Телефонный код                 = 
+ | Почтовые индексы               = 
+ | Интернет-домен                 = 
+ | Код автомобильных номеров      =
+ | Сайт                           = http://inza.ulo.ru/
+ | Категория в Commons            = 
+ | Примечания                     = 
+ | Название параметра1            = [[ОКАТО]]
+ | Параметр1                      = {{ОКАТО|}}
+}}
 '''Инзейбуе''' — [[Ульянонь ёнкс|Ульянонь ёнксонь]] буесь. Прявтошось — [[Инзей ош]]. Буень масторонь покшолмазо 2020,2 вп². Эрицятнеде — 38,3 тёжат, [[эрзят]] 9,4 %, [[рузт]] 85 %, [[печкаст]] 3,3 %.
 
 ==Велеть==
