*Empty MediaWiki Message*

--- a/Вешкайбуе.mw
+++ b/Вешкайбуе.mw
@@ -1,7 +1,7 @@
 {{Регион
  | Цвет1                          = {{Цвет|Россия}}
- | Эрзянь лем                     = Базарсызганонь буе
- | Эсьлем                         = {{lang-ru|Базарносызганский район}}
+ | Эрзянь лем                     = Вешкайбуе
+ | Эсьлем                         = {{lang-ru|Вешкаймский район}}
  | Герб                           = Coat of Arms of Veshkayma rayon (Ulianovsk oblast).png
  | Коцт                           = 
  | Гимн                           = 
@@ -36,7 +36,7 @@
  | Почтовые индексы               = 
  | Интернет-домен                 = 
  | Код автомобильных номеров      =
- | Сайт                           = Veshkaymsky Raion of Ulyanovsk Oblast.png
+ | Сайт                           = http://mo-veshkaima.narod.ru/
  | Категория в Commons            = 
  | Примечания                     = 
  | Название параметра1            = [[ОКАТО]]
