*Empty MediaWiki Message*

--- a/Карсунонь_буе.mw
+++ b/Карсунонь_буе.mw
@@ -1,3 +1,47 @@
+{{Регион
+ | Цвет1                          = {{Цвет|Россия}}
+ | Эрзянь лем                     = Карсунонь буе
+ | Эсьлем                         = {{lang-ru|Карсунский район}}
+ | Герб                           = Coat of arms of Karsunsky Raion.png
+ | Коцт                           = Flag of Karsunsky Raion.png
+ | Гимн                           = 
+ | Мастор                         = {{RUS}}
+ | lat_dir                        = 
+ | lat_deg                        = |lat_min = |lat_sec =
+ | lon_dir                        = 
+ | lon_deg                        = |lon_min = |lon_sec =
+ | region                         = 
+ | type                           = 
+ | уровень                        = 
+ | CoordScale                     = 
+ | Статус                         = [[Карсунонь буе]]
+ | Ашти                           = [[Ульянонь ёнкс]]со
+ | Включает                       = 
+ | Прявтош                        = 
+ | Образование                    = 
+ | Упразднение                    = 
+|Глава                            = 
+  |Название главы                  = 
+ |Глава2                           = 
+  |Название главы2                 = Администрациянь прявт
+ | Карта                          = Karsunsky Raion of Ulyanovsk Oblast.png
+ | Размер карты                   = 
+ | Карта административной единицы = 
+ | Размер карты ае                = 
+ | Часовой пояс                   = {{MSK+0}}
+ | Аббревиатура                   = 
+ | ISO                            = 
+ | FIPS                           = 
+ | Телефонный код                 = 
+ | Почтовые индексы               = 
+ | Интернет-домен                 = 
+ | Код автомобильных номеров      =
+ | Сайт                           = http://karsunmo.ru/
+ | Категория в Commons            = 
+ | Примечания                     = 
+ | Название параметра1            = [[ОКАТО]]
+ | Параметр1                      = {{ОКАТО|}}
+}}
 '''Карсунонь буе''' — [[Ульянонь ёнкс|Ульянонь ёнксонь]] буесь. Прявтошось — [[Карсун]]. Буень масторонь покшолмазо 1768,6 вп². Эрицятнеде — 31,1 тёжат, [[эрзят]] 1 %, [[рузт]] 85 %, [[печкаст]] 10 %, [[ветькеть]] 2 %.
 
 {{Ульянонь ёнксонь буетне}}
