--- a/Кузоватонь_буе.mw
+++ b/Кузоватонь_буе.mw
@@ -1,4 +1,47 @@
-[[Артовкс:Coat of Arms of Kuzovatovsky Raion.png|right|100px]]
+{{Регион
+ | Цвет1                          = {{Цвет|Россия}}
+ | Эрзянь лем                     = Кузоватонь буе
+ | Эсьлем                         = {{lang-ru|Карсунский район}}
+ | Герб                           = Coat of Arms of Kuzovatovsky Raion.png
+ | Коцт                           = 
+ | Гимн                           = 
+ | Мастор                         = {{RUS}}
+ | lat_dir                        = 
+ | lat_deg                        = |lat_min = |lat_sec =
+ | lon_dir                        = 
+ | lon_deg                        = |lon_min = |lon_sec =
+ | region                         = 
+ | type                           = 
+ | уровень                        = 
+ | CoordScale                     = 
+ | Статус                         = [[Кузоватонь буе]]
+ | Ашти                           = [[Ульянонь ёнкс]]со
+ | Включает                       = 
+ | Прявтош                        = 
+ | Образование                    = 
+ | Упразднение                    = 
+|Глава                            = 
+  |Название главы                  = 
+ |Глава2                           = 
+  |Название главы2                 = Администрациянь прявт
+ | Карта                          = Kuzovatovsky Raion of Ulyanovsk Oblast.png
+ | Размер карты                   = 
+ | Карта административной единицы = 
+ | Размер карты ае                = 
+ | Часовой пояс                   = {{MSK+0}}
+ | Аббревиатура                   = 
+ | ISO                            = 
+ | FIPS                           = 
+ | Телефонный код                 = 
+ | Почтовые индексы               = 
+ | Интернет-домен                 = 
+ | Код автомобильных номеров      =
+ | Сайт                           = http://karsunmo.ru/
+ | Категория в Commons            = 
+ | Примечания                     = 
+ | Название параметра1            = [[ОКАТО]]
+ | Параметр1                      = {{ОКАТО|}}
+}}
 '''Кузоватонь буе''' — [[Ульянонь ёнкс|Ульянонь ёнксонь]] буесь. Прявтошось — [[Кузоватово]]. Буень масторонь покшолмазо 2098 вп². Эрицятнеде — 29 тёжат, [[эрзят]] 27 %, [[рузт]] 66 %, [[печкаст]] 0,7 %, [[ветькеть]] 1,5 %.
 
 ==Велеть==
