*Empty MediaWiki Message*

--- a/Юртов,_Авксентий_Филиппович.mw
+++ b/Юртов,_Авксентий_Филиппович.mw
@@ -22,13 +22,13 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Юртов Авксентий'''( {{lang-ru|Авксентий Филиппович Юртов}}, [[1855]] [[даволковонь 21 чи]]  Уфань губерниянь Калейкина велесэ – [[1916]] [[панжиковонь 1 чи]] ) — [[эрзянь кель]]сэ васенце букварень нолдыцязо ([[1884]] иестэ). 
+'''Юртов Авксентий'''({{lang-ru|Авксентий Филиппович Юртов}}, [[1855]] [[даволковонь 21 чи]] Уфань губерниянь Калейкина велесэ – [[1916]] [[панжиковонь 1 чи]]) — [[эрзянь кель]]сэ васенце букварень нолдыцязо ([[1884]] иестэ). 
 
-Чачсь 1854-це иень даволковонь 8 (20)-це чистэ Уфань губерниянь Мезелинань уездэнь Акташонь волостень Калейкина велесэ (ней [[Печкасонь Республикась|Татаронь Республикань]] Альметьевскоень буе). Тенязо-авазо прявтмасторонь сокицяльть-видицяльть, бояронь локшо эзть сода, семияст покшоль. Авксентий  цёракаесь превеель, чарькодицяль, пек бажась содамочинь валдоньтень. Покш назойчинзэ кувалма кучозель тонавтнеме [[Казань ош|Казанев]] церьковасо лемдязь печкасонь школав. Тесэ сонзэ редизе сонсь Н.И. Ильминский, кона панжовтызеяк те школанть. Мейле сынст – тонавтыцянть ды тонавтницянть – ламо [[ие|иес]] сюлминзе кеме ояксчи. Тенень кемевтить вейкест-вейкест туртов сёрматне, конат ванстовсть Казанень архивсэ.
+Чачсь 1854-це иень даволковонь 8 (20)-це чистэ Уфань губерниянь Мезелинань уездэнь Акташонь волостень Калейкина велесэ (ней [[Печкасонь Республикась|Татаронь Республикань]] Альметьевскоень буе). Тенязо-авазо прявтмасторонь сокицяльть-видицяльть, бояронь локшо эзть сода, семияст покшоль. Авксентий  цёракаесь превеель, чарькодицяль, пек бажась содамочинь валдоньтень. Покш назойчинзэ кувалма кучозель тонавтнеме [[Казань ош|Казанев]] церьковасо лемдязь печкасонь школав. Тесэ сонзэ редизе сонсь Н.И. Ильминский, кона панжовтызеяк те школанть. Мейле сынст — тонавтыцянть ды тонавтницянть — ламо [[ие|иес]] сюлминзе кеме ояксчи. Тенень кемевтить вейкест-вейкест туртов сёрматне, конат ванстовсть Казанень архивсэ.
 
-Зярдо казаньсэ панжовсь лияраськень (инородецэнь) тонавтыцянь семинариясь, А. Юртов - эрзятнестэ васенцекс кармась тонавтнеме тосо. Семинариясо содамочинь таштамода Юртов ютавтнесь тиринь кельс церьковань кирьяпусмот,  пурнась эрзянь оршамопельть,  фольклоронь сюпавчить. 1876-це иестэ сон прядызеть тонавтниманть ды ульнесь кадозель тоско тонавтыцякс. Ламо якась эрзянь велетнева,  вешнесь Казанев тонавтнеме превей ды ёроков эйкакшт. Весемикс важодсь семинариясонть [[7 (ловома вал)|сисем]] иеть. 1883-це иестэ сонзэ полавтызеть [[Евсевьевень, Макар Евсевьевич|Макар Евсевьевич Евсевьев]] тонавтницязо. Сонсь Авксентий Филиппович тусь важодеме Самаронь губерниянь Сыре Бесовка велень школав. Тесэ сон тунь од ладсо  ладизеть тонавтома тевенть: сёрмадомадо ды цётома башка кармась ветямо  морамонь,  артомань, аволь классо ловномат. Эрявикс кирьяпусмосо лездась  тензэ Н.И. Ильминский. Цёрковань пире удалов пакшатньнень марто озавтсь вирьпуло. Вастневсь-кортнесь эрицятнень  марто,  ловнось тенст кирьяпусмот,  сёрмалесь пельдест морот,  ёвкст, ёвтамот, содамоёвкст,  валмеревкст, валъёвтавкст ды раськень кельвалонь лия сюпавчить.
+Зярдо казаньсэ панжовсь лияраськень (инородецэнь) тонавтыцянь семинариясь, А. Юртов — эрзятнестэ васенцекс кармась тонавтнеме тосо. Семинариясо содамочинь таштамода Юртов ютавтнесь тиринь кельс церьковань кирьяпусмот,  пурнась эрзянь оршамопельть, фольклоронь сюпавчить. 1876-це иестэ сон прядызеть тонавтниманть ды ульнесь кадозель тоско тонавтыцякс. Ламо якась эрзянь велетнева,  вешнесь Казанев тонавтнеме превей ды ёроков эйкакшт. Весемикс важодсь семинариясонть [[7 (ловома вал)|сисем]] иеть. 1883-це иестэ сонзэ полавтызеть [[Евсевьевень, Макар Евсевьевич|Макар Евсевьевич Евсевьев]] тонавтницязо. Сонсь Авксентий Филиппович тусь важодеме Самаронь губерниянь Сыре Бесовка велень школав. Тесэ сон тунь од ладсо  ладизеть тонавтома тевенть: сёрмадомадо ды цётома башка кармась ветямо  морамонь, артомань, аволь классо ловномат. Эрявикс кирьяпусмосо лездась тензэ Н.И. Ильминский. Цёрковань пире удалов пакшатньнень марто озавтсь вирьпуло. Вастневсь-кортнесь эрицятнень марто, ловнось тенст кирьяпусмот, сёрмалесь пельдест морот, ёвкст, ёвтамот, содамоёвкст, валмеревкст, валъёвтавкст ды раськень кельвалонь лия сюпавчить.
 
-1889-це чистэ А.Ф. Юртов урьвакстсь. Никс саизе Самарань епархиянь училищань трянь-кастонь тейтеренть Березовская Аннань. Секе иестэнть сынь тусть эрямо [[мокшот|мокшонь]] Сыре Бинарадка  велев, ков Авксентий Юртов кучозель учителекс. [[Мокшонь кель|Мокшонь келенть]] сон содылизеть а пек, секс тонавтомс тензэ стакаль. А шождаль эрямозояк: властень кирдейтне а пек мелявтсть «лияраськень» школань тонавтыцятнеде. Теде башка веленть ланга ютась ёндол ды пурьгине марто човор  виев давол, сон тюшумбар нолдызе школантькак, Юртовнень эрямо кудосткак. Палсть Авксентий Филипповичень веси кирьяпусмотне, конёвонзо, ды 1891-це иень кизна сон полавтсы тонавтыцянь тевенть церковасо служамонть лангс: яволявтсь эседензэ Пазнэнь  кемемань ёжось, кона совась эйзэнзэ Казанень семинариясо тонавтнемстэ.
+1889-це чистэ А.Ф. Юртов урьвакстсь. Никс саизе Самарань епархиянь училищань трянь-кастонь тейтеренть Березовская Аннань. Секе иестэнть сынь тусть эрямо [[мокшот|мокшонь]] Сыре Бинарадка велев, ков Авксентий Юртов кучозель учителекс. [[Мокшонь кель|Мокшонь келенть]] сон содылизеть а пек, секс тонавтомс тензэ стакаль. А шождаль эрямозояк: властень кирдейтне а пек мелявтсть «лияраськень» школань тонавтыцятнеде. Теде башка веленть ланга ютась ёндол ды пурьгине марто човор виев давол, сон тюшумбар нолдызе школантькак, Юртовнень эрямо кудосткак. Палсть Авксентий Филипповичень веси кирьяпусмотне, конёвонзо, ды 1891-це иень кизна сон полавтсы тонавтыцянь тевенть церковасо служамонть лангс: яволявтсь эседензэ Пазнэнь кемемань ёжось, кона совась эйзэнзэ Казанень семинариясо тонавтнемстэ.
 
 [[Category:Эрзянь кель|Ю]]
 [[Category:Эрзянь Ине ломанть|Ю]]
