*Empty MediaWiki Message*

--- a/Акаевка_(Лямбирьбуе).mw
+++ b/Акаевка_(Лямбирьбуе).mw
@@ -58,7 +58,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Акаевка''' ( {{Lang-ru|д. Акаевка}}) - веле [[Лямбирьбуе]]сэ, [[Мордовия]]со.
+'''Акаевка''' ( {{Lang-ru|д. Акаевка}}) — веле [[Лямбирьбуе]]сэ, [[Мордовия]]со.
 
 ==Веленть лемденть==
 
