--- a/Чартлиця.mw
+++ b/Чартлиця.mw
@@ -1,3 +1,3 @@
 [[Артовкс:Die Gartenlaube (1892) 221.jpg|кенжешка|вить_кедь|Кезэрэнь Грециянь чартлиця]]
 
-'''Чартлиця''' - те икелепелькс содыця ломань.
+'''Чартлиця''' — те икелепелькс содыця ломань.
