*Empty MediaWiki Message*

--- a/Пашевка_(Тумобуе).mw
+++ b/Пашевка_(Тумобуе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Пашевка'''  -  веле [[Мордовия]]со [[Тумобуе]]сэ.
+'''Пашевка''' — веле [[Мордовия]]со [[Тумобуе]]сэ.
 
 
 [[Category:Мордовиянь велеть|П]]
