*Empty MediaWiki Message*

--- a/Йыкси_(Меремяэ_буе).mw
+++ b/Йыкси_(Меремяэ_буе).mw
@@ -58,7 +58,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Холди''' ({{lang-et|Jõksi}}) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со.
+'''Йыкси''' ({{lang-et|Jõksi}}) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со.
 
 ==Сёрм. ==
 <references />
