--- a/Майнань_буе.mw
+++ b/Майнань_буе.mw
@@ -1,4 +1,47 @@
-[[Артовкс:Coat_of_Arms_of_Mainsky_rayon_(Ulianovsk_oblast).png|right|100px]]
+{{Регион
+ | Цвет1                          = {{Цвет|Россия}}
+ | Эрзянь лем                     = Майнань буе
+ | Эсьлем                         = {{lang-ru|Майнский район}}
+ | Герб                           = Coat of Arms of Mainsky rayon (Ulianovsk oblast).png
+ | Коцт                           = Flag of Maynsky Raion.png
+ | Гимн                           = 
+ | Мастор                         = {{RUS}}
+ | lat_dir                        = 
+ | lat_deg                        = |lat_min = |lat_sec =
+ | lon_dir                        = 
+ | lon_deg                        = |lon_min = |lon_sec =
+ | region                         = 
+ | type                           = 
+ | уровень                        = 
+ | CoordScale                     = 
+ | Статус                         = [[Майнань буе]]
+ | Ашти                           = [[Ульянонь ёнкс]]со
+ | Включает                       = 
+ | Прявтош                        = 
+ | Образование                    = 
+ | Упразднение                    = 
+|Глава                            = 
+  |Название главы                  = 
+ |Глава2                           = 
+  |Название главы2                 = Администрациянь прявт
+ | Карта                          = Maynsky Raion of Ulyanovsk Oblast.png
+ | Размер карты                   = 
+ | Карта административной единицы = 
+ | Размер карты ае                = 
+ | Часовой пояс                   = {{MSK+0}}
+ | Аббревиатура                   = 
+ | ISO                            = 
+ | FIPS                           = 
+ | Телефонный код                 = 
+ | Почтовые индексы               = 
+ | Интернет-домен                 = 
+ | Код автомобильных номеров      =
+ | Сайт                           = http://maina-admin.ru/
+ | Категория в Commons            = 
+ | Примечания                     = 
+ | Название параметра1            = [[ОКАТО]]
+ | Параметр1                      = {{ОКАТО|}}
+}}
 '''Майнань буе''' — [[Ульянонь ёнкс|Ульянонь ёнксонь]] буесь. Прявтошось — [[Майна]]. Буень масторонь покшолмазо 2295 вп². Эрицятнеде — 32,9 тёжат.
 
 {{Ульянонь ёнксонь буетне}}
