*Empty MediaWiki Message*

--- a/Пусмопря_сапоньундокс.mw
+++ b/Пусмопря_сапоньундокс.mw
@@ -1,4 +1,19 @@
-[[Артовкс:Gypsophila paniculata.jpg|thumb|350px|right|border|Вармань крандаз]]
+
+{{Таксономиясь
+|name = Вармань крандаз
+|image file =   Gypsophila paniculata.jpg
+|image_caption = ''Gypsophila paniculata''
+|regnum = [[Plant]]ae
+|unranked_divisio = [[Angiosperms]]
+|unranked_classis = [[Eudicots]]
+|unranked_ordo = [[Core eudicots]]
+|ordo = [[Caryophyllales]]
+|familia = [[Caryophyllaceae]]
+|genus = ''[[Gypsophila]]''
+|species = '''''G. paniculata'''''
+|binomial = ''Gypsophila paniculata''
+|binomial_authority = [[Carl Linnaeus|L.]]
+}}
 '''Вармань крандаз''' (лат. ''Gypsophila paniculata'') — вейке иень перть касыця тикше. Гвоздикань семиянь. 
 
 Тикшенть ундоксозо [[1 (ловома вал)|вейке]], вишкине. Сонсь тикшесь пек рацяня, прок шар. Лопанзо овсе вишкинеть, цецянзо [[ашо|ашолат]]. Зярдо видьмензэ кенерить, весе курось сезеви ундокстонть, ды вармась пуви эйсэнзэ лия таркав. Курось кеверезь кевери. Кассы степсэ. Ловови ормадо лезэв тикшекс.
