поладыять седе ламосто

--- a/Туймазань_буе.mw
+++ b/Туймазань_буе.mw
@@ -17,7 +17,7 @@
  | Статус                         = [[Муниципальной буе]]
  | Ашти                           = [[Башкирия Республикась|Башкириясо]]
  | Включает                       = 1 ош, 18 велень администрацият
- | Прявтош                        = [[Туймазы]] ош
+ | Прявтош                        = [[Туймазы ош]] 
  | Образование                    = [[1930 ие]]
  | Упразднение                    = 
 |Глава                            = 
@@ -43,3 +43,48 @@
  | Параметр1                      = {{ОКАТО|}}
 }}
 '''Туймазань буе''' ({{lang-ru|Туймазинский район}}, {{lang-ba|Туймазы районы}}) — те муниципальной буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. Куншка таркась - Туймазы ош.
+== Эриця раськеть==
+Эрицятнеде иетнева:
+{|border=1
+!Ие
+!Эрицятнеде
+|-
+|[[2002]]<ref name="Всероссийская перепись">[http://www.perepis2002.ru/ct/doc/1_TOM_01_04.xls Всероссийская перепись населения 2002 года. Том. 1, таблица 4. Численность населения России, федеральных округов, субъектов Российской Федерации, районов, городских поселений, сельских населённых пунктов - райцентров и сельских населённых пунктов с населением 3 тысячи и более. {{ref-ru}}]</ref>
+|30 923
+|-
+|[[2008]]<ref name="1.5. Численность">[http://bashstat.gks.ru/wps/wcm/connect/rosstat_ts/bashstat/resources/88ec76804db875b29208d3356f373569/4+раздел.pdf 1.5. Численность населения республики Башкортостан по муниципальным образованиям на 1 января 2009 года {{ref-ru}}]</ref>
+|129 993
+|-
+|[[2009]]<ref name="Ч Оценка численности">[http://www.gks.ru/dbscripts/munst/munst80/DBInet.cgi?pl=8112027 Оценка численности Республики Башкортостан постоянного населения на 1 января 2009-2016 годов {{ref-ru}}]</ref>
+|130 548
+|-
+|[[2010]]<ref name="Всероссийская перепись 2010">[http://bashstat.gks.ru/wps/wcm/connect/rosstat_ts/bashstat/resources/2f055a804e303140ba45fe3bf8d20d64/Численность+населения+по+населенным+пунктам+Республики+Башкортостан.pdf Всероссийская перепись населения 2010 года. Численность населения по населённым пунктам Республики Башкортостан. {{ref-ru}}]</ref> 
+|131 225	
+|-
+|[[2012]]<ref name="Численность населения  2012_Таблица 35.">[http://www.gks.ru/free_doc/doc_2012/bul_dr/mun_obr2012.rar Численность населения Российской Федерации по муниципальным образованиям. Таблица 35. Оценка численности постоянного населения на 1 января 2012 года. {{ref-ru}}]</ref> 
+|130 942
+|-
+|[[2013]]<ref name="Численность населения Российской">[http://www.gks.ru/free_doc/doc_2013/bul_dr/mun_obr2013.rar Численность населения Российской Федерации по муниципальным образованиям на 1 января 2013 года. — М.: Федеральная служба государственной статистики Росстат, 2013. — 528 с. (Табл. 33. Численность населения городских округов, муниципальных районов, городских и сельских поселений, городских населённых пунктов, сельских населённых пунктов). {{ref-ru}}]</ref>
+|131 147
+|-
+|[[2014]]<ref name="Таблица 33">[http://www.gks.ru/free_doc/doc_2014/bul_dr/mun_obr2014.rar Таблица 33. Численность населения Российской Федерации по муниципальным образованиям на 1 января 2014 года.  {{ref-ru}}]</ref>
+|132 053
+|-
+|[[2015]]<ref name="Численность населения 2015">[http://www.gks.ru/free_doc/doc_2015/bul_dr/mun_obr2015.rar Численность населения Российской Федерации по муниципальным образованиям на 1 января 2015 года {{ref-ru}}]</ref>
+|132 129
+|-
+|[[2016]]<ref name="Численность населения на 1 января 2016">[http://www.gks.ru/free_doc/doc_2016/bul_dr/mun_obr2016.rar Численность населения Российской Федерации по муниципальным образованиям на 1 января 2016 года {{ref-ru}}]</ref>
+|132 349
+|-
+|}
+
+Ошсо (Туймазы) эрить 51.64 % эрицятнедэ.
+
+[[2010 ие]]нь Ловнома-сёрмадстоманть коряс: [[печкаст]] —  38,5 %, [[башкирт]] —  33,7 %,, [[рузт]] — 22,8 %, [[ветькеть]] — 1,5 %, [[марить]] — 1,4 %,  лия раськень ломанть — 2,1 %<ref name="ВПН-2010">{{cite web|url=http://www.bashstat.ru/perepis2010/pub_work/Итоги%20Всероссийской%20переписи%20населения%202010%20года%20по%20Республике%20Башкортостан.pdf|title=Итоги Всероссийской переписи населения по Республике Башкортостан|format=pdf|publisher=Территориальный орган Федеральной службы государственной статистики по Республике Башкортостан|accessdate=2013-03-05|archiveurl=http://www.webcitation.org/6EzC0FMGq|archivedate=2013-03-09}}  {{ref-ru}}</ref>.
+
+==Туймазань буень велеть==
+==Содавикс ломанть те буестэнть==
+
+== Лисьм.: ==
+<references />
+[[Category:Башкирия Республикань буетне|Т]]
