--- a/Пусмопря_сапоньундокс.mw
+++ b/Пусмопря_сапоньундокс.mw
@@ -1,6 +1,7 @@
 
 {{Таксономиясь
 |name = Вармань крандаз
+|latin = Gypsophila paniculata
 |image file =   Gypsophila paniculata.jpg
 |image_caption = ''Gypsophila paniculata''
 |regnum = [[Plant]]ae
@@ -14,7 +15,7 @@
 |binomial = ''Gypsophila paniculata''
 |binomial_authority = [[Carl Linnaeus|L.]]
 }}
-'''Вармань крандаз''' (лат. ''Gypsophila paniculata'') — вейке иень перть касыця тикше. Гвоздикань семиянь. 
+'''Вармань крандаз''' ({{Lang-la|Gypsophila paniculata}}) — вейке иень перть касыця тикше. Гвоздикань семиянь. 
 
 Тикшенть ундоксозо [[1 (ловома вал)|вейке]], вишкине. Сонсь тикшесь пек рацяня, прок шар. Лопанзо овсе вишкинеть, цецянзо [[ашо|ашолат]]. Зярдо видьмензэ кенерить, весе курось сезеви ундокстонть, ды вармась пуви эйсэнзэ лия таркав. Курось кеверезь кевери. Кассы степсэ. Ловови ормадо лезэв тикшекс.
 
