*Empty MediaWiki Message*

--- a/Покш_кирмалав.mw
+++ b/Покш_кирмалав.mw
@@ -1,4 +1,28 @@
-[[Image:W gobou4031.jpg|thumb|250px|right|border|Кирмалав]]
+{{Таксономиясь
+|name = Кирмалав
+ |image file        = W gobou4031.jpg
+ |image descr       = 
+ |regnum            = Касыкс
+ |parent            = Arctium 
+ |rang              = Вид
+ |latin             = Arctium lappa
+ |author            = [[L.]], 1753
+ |syn               = 
+* {{btname|Arctium edule|[[Beger]]}}
+* {{btname|Arctium majus|[[Bernh.]]}}
+* {{btname|Lappa edulis|[[Siebold]] [[ex (таксономия)|ex]] [[Miq.]]}}, [[nom. inval.]]
+* {{btname|Lappa major|[[Gaertn.]]}}
+* {{btname|Lappa officinalis|[[All.]]}}
+* {{btname|Lappa vulgaris|[[Hill.]]}}<ref name="ФСССР"/>
+ |range map         = 
+ |range map caption = 
+ |range map width   = 
+ |range legend      = 
+ |iucnstatus        = 
+ |iucn              = 
+ |wikispecies       = Arctium lappa
+ |grin              = 3857
+}}
 '''Кирмалав''' ({{lang-la|Polygonum aviculare}}) — покш ламоиень астрань буестэ [[касыкс]]. Касы ломань удалксонь вакссо: кинь вакссо, пиресэ, паксясо. 
 
 [[Категория:Тикшеть|К]]
