*Empty MediaWiki Message*

--- a/Копёр.mw
+++ b/Копёр.mw
@@ -1,5 +1,19 @@
-[[Артовкс:Krapai001.JPG|thumb|250px|Копёр]]
-
+{{Таксономиясь
+|name =Копёр
+ | image file        = Krapai001.JPG
+ | image title       = Копёр
+ | image descr       = Копёр
+ | regnum            = Касыкс
+ | parent            = Apieae
+ | rang              = Род
+ | latin             = Anethum
+ | author            = [[L.]], 1753
+ | children name     = Единственный вид
+ | children          = {{bt-latrus|s=0|Anethum graveolens|aut=L., 1753|Укроп огородный}}
+ | wikispecies       = Anethum graveolens
+ | commons           = Category:Anethum graveolens
+ | grin              = 670
+ }}
 '''Копёр''' (лат. ''Anethum graveolens'') Те ве иень касовкстнэде.
 
 [[Категория:Ярсамо тикшеть|К]]
