*Empty MediaWiki Message*

--- a/Вармань_чиньжарамо.mw
+++ b/Вармань_чиньжарамо.mw
@@ -7,14 +7,14 @@
 |subregnum = 
 |regnum =
 |раздел =
-|superphylum =
+|superphylum =bhjn mbnm
 |phylum = 
 |subphylum =
 |superdivisio =
 |divisio =
 |subdivisio = 
 |superclassis =
-|classis = 
+|classis = hjbnm
 |subclassis =
 |infraclassis =
 |superordo =
